[package]
name = "cedar-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
cedar-policy = "4.2"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "cedar-agent"
path = "src/main.rs"